<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pose_question"
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4" />


        <ImageView
            android:id="@+id/flavor_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_vertical_answers"
            android:layout_marginTop="@dimen/vertical_padding"
            android:contentDescription="@string/picture_5"
            android:src="@drawable/shoggoth_by_nottsuo" />

        <CheckBox
            android:id="@+id/checkbox_1"
            style="@style/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4_answer_1" />

        <CheckBox
            android:id="@+id/checkbox_2"
            style="@style/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4_answer_2" />

        <CheckBox
            android:id="@+id/checkbox_3"
            style="@style/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4_answer_3" />

        <CheckBox
            android:id="@+id/checkbox_4"
            style="@style/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4_answer_4" />

        <Button
            android:id="@+id/answer_button"
            style="@style/standardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="giveAnswer"
            android:text="@string/answer_button" />

        <TextView
            android:id="@+id/progress"
            style="@style/standardText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progress_bar" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/vertical_padding"
            android:layout_marginRight="@dimen/vertical_padding"
            android:indeterminate="false"
            android:max="60"
            android:progress="0" />

    </LinearLayout>

</ScrollView>
