<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pose_question"
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <ImageView
            android:id="@+id/flavor_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_padding"
            android:contentDescription="@string/picture_2"
            android:src="@drawable/spawn_of_the_stars_by_sofyan_syarief" />

        <TextView
            android:id="@+id/explanation_text"
            style="@style/standardText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explanation_1" />


        <Button
            android:id="@+id/continue_button"
            style="@style/standardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="continueQuiz"
            android:text="@string/continue_button" />

        <TextView
            android:id="@+id/progress"
            style="@style/standardText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progress_bar" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/vertical_padding"
            android:layout_marginRight="@dimen/vertical_padding"
            android:indeterminate="false"
            android:max="60"
            android:progress="0" />

    </LinearLayout>

</ScrollView>
