<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pose_question"
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greeting" />

        <EditText
            android:id="@+id/player_name"
            style="@style/editTextViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textCapWords" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/picture_size"
            android:layout_marginTop="@dimen/vertical_padding"
            android:src="@drawable/the_unholy_worship_by_gwabryel" />

        <TextView
            android:id="@+id/explanation_text"
            style="@style/standardText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/starting_call" />

        <Button
            android:id="@+id/next_button"
            style="@style/standardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startQuiz"
            android:text="@string/start_button" />

    </LinearLayout>

</ScrollView>
