<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pose_question"
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />


        <ImageView
            android:id="@+id/flavor_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/picture_size"
            android:layout_marginTop="@dimen/vertical_padding"
            android:src="@drawable/spawn_of_the_stars_by_sofyan_syarief" />

        <RadioGroup
            style="@style/radioButtonStandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_1_button"
                style="@style/radioButtonChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_answer_1" />

            <RadioButton
                android:id="@+id/answer_2_button"
                style="@style/radioButtonChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_answer_2" />

            <RadioButton
                android:id="@+id/answer_3_button"
                style="@style/radioButtonChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_answer_3" />

            <RadioButton
                android:id="@+id/answer_4_button"
                style="@style/radioButtonChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_answer_4" />
        </RadioGroup>

        <Button
            android:id="@+id/answer_button"
            style="@style/standardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="giveAnswer"
            android:text="@string/answer_button" />

        <TextView
            android:id="@+id/mythos_knowledge"
            style="@style/standardText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_bar" />

        <ProgressBar
            android:id="@+id/score_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:layout_marginLeft="@dimen/vertical_padding"
            android:layout_marginRight="@dimen/vertical_padding"/>

    </LinearLayout>



</ScrollView>
