<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pose_question"
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_6" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/picture_size"
            android:layout_marginTop="@dimen/vertical_padding"
            android:src="@drawable/the_madness_from_the_sea_by_sofyan_syarief" />

        <TextView
            android:id="@+id/explanation_text"
            style="@style/standardText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poem" />

        <EditText
            android:id="@+id/poem_end"
            style="@style/editTextViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/answer_button"
            style="@style/standardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="giveAnswer"
            android:text="@string/answer_button" />

        <TextView
            android:id="@+id/mythos_knowledge"
            style="@style/standardText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_bar" />

        <ProgressBar
            android:id="@+id/score_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:layout_marginLeft="@dimen/vertical_padding"
            android:layout_marginRight="@dimen/vertical_padding" />

    </LinearLayout>

</ScrollView>
